--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chess-game-backend",
+  "name": "chance-chess-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
